<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Tenant.Authentication_Part.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/back_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;   Back to Home"
        style="@style/big_text"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@drawable/clickable_text_color_state"
        android:clickable="true"
        />

    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_banner_foreground"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        />

    <LinearLayout
        android:id="@+id/username_ll"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="User Name:"
            />
        <EditText
            android:id="@+id/username_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="Enter your user name"
            android:textSize="12sp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_ll"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Password:"
            />
        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter your password"
            android:layout_weight="1"
            android:textSize="12sp"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <CheckBox
            android:id="@+id/remember_me_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            style="@style/small_text"
            android:layout_marginRight="25dp"
            />
        <CheckBox
            android:id="@+id/auto_login_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto Login"
            style="@style/small_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/user_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_btn"
            />
        <Button
            android:id="@+id/staff_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_login_btn"
            android:layout_marginLeft="25dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_notice"
        android:layout_marginTop="50dp"
        android:textColor="@drawable/clickable_text_color_state"
        style="@style/small_text"
        />

</LinearLayout>